# soteria-compiler

src/drivers/: CMakeLists.txt  crypt.py  hmac.py  linker.py  sancus-crypt.in
src/llvm/: CMakeLists.txt  SancusModuleCreator.cpp
src/sancus_support/: CMakeLists.txt  sm_crypt.h
